# ai-platform-engineering-copilot

./: CLAUDE.md  pyproject.toml  ruff.toml
app/api/: app.py
app/api/agent/: router.py  schemas.py
app/core/: llm_client.py
app/schemas/: build_request.py  plan.py  result.py
cicd_agent/infra/: credentials.py  models.py  sanitizer.py
cicd_agent/models/: __init__.py  plan.py  recovery.py  request.py  result.py
docs/: architecture.md  project_proposal.md  week1_agent_development_plan.md  week1_detailed_plan.md
docs/superpowers/plans/: 2026-03-24-day3-settings-credentials.md
docs/superpowers/specs/: 2026-03-16-cicd-image-pipeline-design.md  2026-03-23-day3-settings-credentials-design.md
tests/schemas/: test_build_request.py  test_plan.py  test_result.py
tests/test_infra/: test_credentials.py  test_models.py  test_sanitizer.py
tests/test_models/: test_plan.py  test_recovery.py  test_request.py  test_result.py
