[project]
name = "ai-platform-engineering-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.isort]
profile = "black"
line_length = 155
