[project]
name = "ai-platform-engineering-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "litellm>=1.30.0",
    "paramiko>=3.5.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.5",
]

[tool.isort]
profile = "black"
line_length = 155
